# ArchIToken-VPN-Client

./: .gitignore  LICENSE  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml  settings.gradle
.github/workflows/: build.yml
android/: build.gradle
android/src/main/: AndroidManifest.xml
android/src/main/assets/architoken-mobile/: README.md
android/src/main/java/ai/activein/architokenvpnclient/: ArchITokenVpnService.java  MainActivity.java  RuntimeInstaller.java
android/src/main/res/values/: styles.xml
docs/: ARCHITECTURE.md  BUILD_MATRIX.md  MOBILE_RELEASE.md  MOBILE_TUNNEL.md  PLATFORM_STRATEGY.md  ROADMAP.md  SIGNING.md
examples/: nodes.example.json
ios/ArchITokenVPNClient/: ArchITokenVPNClientApp.swift  ContentView.swift  Info.plist  TunnelManager.swift
ios/ArchITokenVPNClient.xcodeproj/: project.pbxproj
ios/ArchITokenVPNClient.xcodeproj/xcshareddata/xcschemes/: ArchITokenVPNClient.xcscheme
ios/PacketTunnel/: Info.plist  PacketRunner.swift  PacketRuntime.swift  PacketTunnelProvider.swift
packaging/: pyinstaller_entry.py
scripts/: build-ios-signed.sh  build-local.sh  scan-secrets.sh
shared/: node-profile.schema.json
src/architoken_vpn_client/: __init__.py  cli.py  gui.py  models.py  subscription.py  uri.py  xray.py
tests/: test_uri.py
